--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "formik": "^2.2.9",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "reactotron-react-native": "^5.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@babel/eslint-parser": "^7.5.4",
     "@babel/runtime": "^7.18.3",
     "@react-native-community/eslint-config": "^3.0.2",
     "babel-jest": "^28.1.1",
     "eslint": "^8.17.0",
     "jest": "^28.1.1",
     "metro-react-native-babel-preset": "^0.71.1",
-    "react-test-renderer": "17.0.2",
-    "@babel/eslint-parser": "^7.5.4"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
