--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "react": "17.0.2",
+    "react-moment": "^1.1.2",
     "react-native": "0.68.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-redux": "^8.0.2",
     "reactotron-react-native": "^5.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
