--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.2",
+    "add": "^2.0.6",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34",
     "react": "17.0.2",
     "react-moment": "^1.1.2",
     "react-native": "0.68.2",
+    "react-native-flash-message": "^0.2.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
@@ -27,6 +31,7 @@
     "reactotron-react-native": "^5.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
