--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tcgrdna",
+  "name": "xcdnews",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
@@ -25,9 +26,11 @@
     "react-native": "0.68.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.2",
     "reactotron-react-native": "^5.0.2",
     "redux": "^4.2.0",
