--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-share": "^7.6.4",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.2",
