--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,8 @@ buildscript {
             // Otherwise we default to the side-by-side NDK version from AGP.
             ndkVersion = "21.4.7075529"
         }
+
+        googlePlayServicesAuthVersion = "19.2.0"
     }
     repositories {
         google()
@@ -27,6 +29,8 @@ buildscript {
         classpath("de.undercouch:gradle-download-task:4.1.2")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.12'
+        
     }
 }
 
